--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
       <div class="servicios">
         <section class="servicio">
-          <h3>Diseño web</h3>
+          <h3>Redes</h3>
           <div class="iconos">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -82,15 +82,23 @@
             </svg>
           </div>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum
-            eveniet sequi deleniti expedita obcaecati minima hic autem beatae
-            numquam eos totam a asperiores, quibusdam maxime facilis ad tempore,
-            repudiandae laborum.
+          Trabajo con tecnologías como TCP/IP, VPN, VLAN e IPv6, y tengo experiencia con equipos de marcas como Cisco, Mikrotik, Ubiquiti y Fortinet.
+Ofrezco servicios como:
+
+Revisión y mejora de redes existentes
+
+Diseño de redes nuevas para hogares, oficinas o negocios
+
+Configuración de routers, switches y Wi-Fi
+
+Soporte técnico y soluciones a problemas de conectividad
+
+Si tu red es lenta, inestable o poco segura, te ayudo a mejorarla con soluciones prácticas y adaptadas a tu entorno.
           </p>
         </section>
 
         <section class="servicio">
-          <h3>Aplicaciones web</h3>
+          <h3>Soporte técnico</h3>
           <div class="iconos">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -132,15 +140,20 @@
             </svg>
           </div>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro,
-            recusandae nemo! Ex similique consequuntur labore, quae fugiat eos
-            molestiae, nisi amet qui tempora pariatur alias fuga. Placeat ex
-            accusamus incidunt!
+          Diagnóstico y reparación de computadoras (lentas, con virus, que no encienden)
+
+Instalación de programas y sistemas operativos
+
+Configuración de impresoras, escáneres y redes
+
+Mantenimiento preventivo (limpieza, formateo, respaldo)
+
+Soporte remoto o a domicilio, según tu ubicación
           </p>
         </section>
 
         <section class="servicio">
-          <h3>E-Commerce</h3>
+          <h3>Base de datos</h3>
           <div class="iconos">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -163,10 +176,17 @@
             </svg>
           </div>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
-            ad doloremque iure sapiente enim neque necessitatibus animi rerum
-            quasi alias. Laboriosam pariatur dignissimos, explicabo dolores
-            officiis beatae. Quibusdam, sit nostrum.
+          Diseño e implementación de bases de datos a la medida
+
+Optimización de consultas y rendimiento
+
+Mantenimiento y respaldo de información
+
+Migración de datos entre sistemas
+
+Solución de errores y recuperación de datos
+
+Trabajo con MySQL, SQL Server, PostgreSQL, Oracle y más
           </p>
         </section>
       </div>
